[tool.poetry]
name = "cimhub"
version = "1.2"
description = ""
authors = ["afisher1 <andrew.fisher@pnnl.gov>"]
packages = [{include = "cimhub", from="src_python"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
