[wheel]
universal = 1

[metadata]
name = cimhub
version = 1.0.1
author = Tom McDermott
author_email = Thomas.McDermott@PNNL.gov
description = cimhub: Convert and validate electric power distribution system models.
long_description = file: PYPIDESC.md
long_description_content_type = text/markdown
license_file = license.md
license = BSD
url = https://github.com/GRIDAPPSD/CIMHub
project_urls =
    Bug Tracker = https://github.com/GRIDAPPSD/CIMHub/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src_python
install_requires =
    SPARQLWrapper>=1.8.5
    numpy>=1.21.2
    pandas>=1.3.3
    lxml>=4.6.3

[options.packages.find]
where = src_python
