[bdist_wheel]
universal = 1

[metadata]
name = cimhub
version = 1.3.0
author = Tom McDermott
author_email = Thomas.McDermott@PNNL.gov
description = cimhub: Convert and validate electric power distribution system models.
long_description = file: PYPIDESC.md
long_description_content_type = text/markdown
license_files = license.md
license = BSD
url = https://github.com/GRIDAPPSD/CIMHub
project_urls =
    Bug Tracker = https://github.com/GRIDAPPSD/CIMHub/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src_python
install_requires =
    SPARQLWrapper>=2.0.0
    numpy>=1.23.0
    pandas>=1.4.3
    lxml>=4.9.0
    scipy>=1.8.1
    openpyxl>=3.1.5

[options.packages.find]
where = src_python

[options.package_data]
cimhub =
    *.json
